@@ -1,14 +1,15 @@
-
 package com.beautiflow.global.common.config;
 
-import com.beautiflow.global.common.security.CustomOAuth2UserService;
-import com.beautiflow.global.common.security.CustomSuccessHandler;
-import com.beautiflow.global.common.security.JWTFilter;
+import com.beautiflow.global.common.security.CustomAuthenticationEntryPoint;
+import com.beautiflow.global.common.security.authentication.CustomOAuth2UserService;
+import com.beautiflow.global.common.security.authentication.CustomSuccessHandler;
+import com.beautiflow.global.common.security.filter.JWTExceptionFilter;
+import com.beautiflow.global.common.security.filter.JWTFilter;
 import com.beautiflow.global.common.util.JWTUtil;
-import com.beautiflow.user.repository.UserRepository;
-import jakarta.servlet.http.HttpServletRequest;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,27 +17,27 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.savedrequest.NullRequestCache;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
 
 @Configuration
+@RequiredArgsConstructor
 @EnableWebSecurity
 public class SecurityConfig {
 
     private final CustomOAuth2UserService customOAuth2UserService;
     private final CustomSuccessHandler customSuccessHandler;
     private final JWTUtil jwtUtil;
+    public final JWTExceptionFilter jwtExceptionFilter;
+    private final CustomAuthenticationEntryPoint authenticationEntryPoint;
 
-    public SecurityConfig(CustomOAuth2UserService customOAuth2UserService,
-            CustomSuccessHandler customSuccessHandler, JWTUtil jwtUtil
-    ) {
-        this.customOAuth2UserService = customOAuth2UserService;
-        this.customSuccessHandler = customSuccessHandler;
-        this.jwtUtil = jwtUtil;
-    }
+//    @Bean
+//    public JWTFilter jwtFilter() {
+//        return new JWTFilter(jwtUtil);
+//    }
 
     @Bean
-    public SecurityFilterChain filterChain(HttpSecurity http, UserRepository userRepository) throws Exception {
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
         http
 
@@ -44,19 +45,19 @@ public class SecurityConfig {
                         request -> {
                             CorsConfiguration configuration = new CorsConfiguration();
                             configuration.setAllowedOrigins(
-                                    Collections.singletonList("http://localhost:3000"));
-                            configuration.setAllowedMethods(Collections.singletonList("*"));
+                                    List.of("http://localhost:3000","http://localhost:8080", "https://beautiflow.co.kr"));
+                            configuration.setAllowedMethods(
+                                    Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
                             configuration.setAllowCredentials(true);
-                            configuration.setAllowedHeaders(Collections.singletonList("*"));
+                            configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
                             configuration.setMaxAge(3600L);
-                            configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization"));
+                            configuration.setExposedHeaders(List.of("Authorization"));
                             return configuration;
                         }))
 
+                .requestCache(cache -> cache.requestCache(new NullRequestCache()))
                 .csrf(csrf -> csrf.disable())
-
                 .formLogin(form -> form.disable())
-
                 .httpBasic(httpBasic -> httpBasic.disable())
 
                 .oauth2Login((oauth2) -> oauth2
@@ -68,16 +69,22 @@ public class SecurityConfig {
                         .requestMatchers(
                                 "/",
                                 "/users/signup",
+                                "/users/refresh",
                                 "/swagger-ui/**",
                                 "/v3/api-docs/**",
-                                "/swagger-ui.html"
-                        ).permitAll()                        .anyRequest().authenticated())
+                                "/swagger-ui.html",
+                                "/health"
+                        ).permitAll()
+                        .anyRequest().authenticated())
 
                 .sessionManagement(
                         session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                .addFilterBefore(new JWTFilter(jwtUtil, userRepository),
-                        UsernamePasswordAuthenticationFilter.class);
-        ;
+                .addFilterBefore(new JWTFilter(jwtUtil),
+                        UsernamePasswordAuthenticationFilter.class)
+                .addFilterBefore(jwtExceptionFilter, JWTFilter.class)
+                .exceptionHandling(e -> e
+                        .authenticationEntryPoint(authenticationEntryPoint)
+                );
 
         return http.build();
 
